oriterm_core/tests/vttest/snapshots/vttest__menu4__80x24_04_dblsize_06.snap
---
source: oriterm_core/tests/vttest/menu4.rs
expression: text
---
Exactly half of the box should remain. Push <RETURN>                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────┐                                        
┌──────────────────────────────────────┐                                        
│                                       │                                       
│                                       │                                       
│ * The mad programmer strikes again *  │
