oriterm_core/tests/vttest/snapshots/vttest__menu4__97x33_04_dblsize_02.snap
---
source: oriterm_core/tests/vttest/menu4.rs
expression: text
---
 97 column mode                                                                                  
                                                                                                 
                                                                                                 
                                                                                                 
  v------- left margin                                                                           
                                                                                                 
  This is a normal-sized line                                                                    
                                                                                                 
 This is a Double-width line                                                                     
                                                                                                 
 This is a Double-width-and-height line                                                          
 This is a Double-width-and-height line                                                          
                                                                                                 
 This is another such line                                                                       
 This is another such line                                                                       
                                                                                                 
  ^------- left margin                                                                           
                                                                                                 
                                                                                                 
                                                                                                 
This **is** a double-width line                                                                  
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Push <RETURN>
