oriterm_core/tests/vttest/snapshots/vttest__menu4__97x33_04_dblsize_05.snap
---
source: oriterm_core/tests/vttest/menu4.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
┌──────────────────────────────────────┐                                                         
┌──────────────────────────────────────┐                                                         
│                                       │                                                        
│                                       │                                                        
│ * The mad programmer strikes again *  │                                                        
│ * The mad programmer strikes again *  │                                                        
│                                      │                                                         
│                                      │                                                         
└──────────────────────────────────────┘                                                         
└──────────────────────────────────────┘                                                         
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Another test pattern...  a frame with blinking bold text,                                        
all in double-height double-width size. Push <RETURN>
